Allowed compiling under GHC using ghcjs-base-stub

--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -21,6 +21,8 @@ library
   ghc-options:         -Wall
   if impl(ghcjs)
     build-depends: ghcjs-base
+  if !impl(ghcjs)
+    build-depends: ghcjs-base-stub
 
 source-repository head
   type:     git
