--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -22,7 +22,7 @@ library
   if impl(ghcjs)
     build-depends: ghcjs-base
   if !impl(ghcjs)
-    build-depends: ghcjs-base-stub
+    build-depends: ghcjs-base-stub >= 0.1.0.0 && < 1
 
 source-repository head
   type:     git
