--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -1,5 +1,5 @@
 name:                javascript-extras
-version:             0.1.0.2
+version:             0.2.0.0
 synopsis:            Extra javascript functions when using GHCJS
 description:         Extra javascript functions when using GHCJS
 homepage:            https://github.com/louispan/javascript-extras#readme
@@ -15,14 +15,21 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
+  js-sources:          jsbits/extras.js
   exposed-modules:     JavaScript.Extras
+                       JavaScript.Extras.String
+                       JavaScript.Extras.Recast
+                       JavaScript.Extras.Property
   build-depends:       base >= 4.7 && < 5
+                     , deepseq >= 1.4 && < 2
+                     , parallel >= 3.2 && < 4
+                     , text >= 1.2 && < 1.3
   default-language:    Haskell2010
   ghc-options:         -Wall
   if impl(ghcjs)
     build-depends: ghcjs-base
   if !impl(ghcjs)
-    build-depends: ghcjs-base-stub >= 0.1.0.0 && < 1
+    build-depends: ghcjs-base-stub >= 0.1.0.1 && < 1
 
 source-repository head
   type:     git
