--- a/stack.yaml
+++ b/stack.yaml
@@ -37,13 +37,11 @@ resolver: lts-7.19
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
-- location: '/Users/louis/repo/js/ghcjs-base-stub'
-  extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- javascript-extras-0.1.0.1
+- ghcjs-base-stub-0.1.0.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
