--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -1,5 +1,5 @@
 name:                javascript-extras
-version:             0.3.0.0
+version:             0.3.1.0
 synopsis:            Extra javascript functions when using GHCJS
 description:         Extra javascript functions when using GHCJS
 homepage:            https://github.com/louispan/javascript-extras#readme
@@ -21,6 +21,7 @@ library
                        JavaScript.Extras.Number
                        JavaScript.Extras.Property
                        JavaScript.Extras.JSVar
+                       JavaScript.Extras.JSVar.Unsafe
   build-depends:       base >= 4.7 && < 5
                      , deepseq >= 1.4 && < 2
                      , parallel >= 3.2 && < 4
@@ -31,6 +32,21 @@ library
     build-depends: ghcjs-base
   if !impl(ghcjs)
     build-depends: ghcjs-base-stub >= 0.1.0.1 && < 1
+
+executable javascript-extras-test
+  hs-source-dirs:      test/haskell
+  main-is:             Main.hs
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
+  cpp-options:         -DGHCJS_BROWSER
+  build-depends:       base >= 4.7 && < 5
+                     , javascript-extras >= 0.3.1
+  default-language:    Haskell2010
+  default-extensions:  ApplicativeDo
+  if impl(ghcjs)
+    build-depends: ghcjs-base
+                 , ghcjs-prim >= 0.1 && < 0.2
+  if !impl(ghcjs)
+    build-depends: ghcjs-base-stub >= 0.1.0.2 && < 1
 
 source-repository head
   type:     git
