--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -39,7 +39,7 @@ executable javascript-extras-test
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   cpp-options:         -DGHCJS_BROWSER
   build-depends:       base >= 4.7 && < 5
-                     , javascript-extras >= 0.3.1
+                     , javascript-extras
   default-language:    Haskell2010
   default-extensions:  ApplicativeDo
   if impl(ghcjs)
