--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -23,15 +23,15 @@ library
                        JavaScript.Extras.JSVar
                        JavaScript.Extras.JSVar.Unsafe
   build-depends:       base >= 4.7 && < 5
-                     , deepseq >= 1.4 && < 2
-                     , parallel >= 3.2 && < 4
-                     , text >= 1.2 && < 1.3
+                     , deepseq >= 1.4
+                     , parallel >= 3.2
+                     , text >= 1.2
   default-language:    Haskell2010
   ghc-options:         -Wall
   if impl(ghcjs)
     build-depends: ghcjs-base
   if !impl(ghcjs)
-    build-depends: ghcjs-base-stub >= 0.1.0.1 && < 1
+    build-depends: ghcjs-base-stub >= 0.1.0.1
 
 executable javascript-extras-test
   hs-source-dirs:      test/haskell
@@ -44,9 +44,9 @@ executable javascript-extras-test
   default-extensions:  ApplicativeDo
   if impl(ghcjs)
     build-depends: ghcjs-base
-                 , ghcjs-prim >= 0.1 && < 0.2
+                 , ghcjs-prim >= 0.1
   if !impl(ghcjs)
-    build-depends: ghcjs-base-stub >= 0.1.0.2 && < 1
+    build-depends: ghcjs-base-stub >= 0.1.0.2
 
 source-repository head
   type:     git
