--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -24,6 +24,7 @@ library
                        JavaScript.Extras.JSRep.Unsafe
   build-depends:       base >= 4.7 && < 5
                      , deepseq >= 1.4
+                     , newtype-generics >= 0.5
                      , parallel >= 3.2
                      , text >= 1.2
   default-language:    Haskell2010
@@ -46,7 +47,7 @@ executable javascript-extras-test
     build-depends: ghcjs-base
                  , ghcjs-prim >= 0.1
   if !impl(ghcjs)
-    build-depends: ghcjs-base-stub >= 0.1.0.2
+    build-depends: ghcjs-base-stub >= 0.2
 
 source-repository head
   type:     git
