--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-7.19
+resolver: nightly-2018-04-21
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -37,11 +37,13 @@ resolver: lts-7.19
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+- location: '/Users/louis/repo/js/ghcjs-base-stub'
+  extra-dep: true
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- ghcjs-base-stub-0.1.0.2
+# - ghcjs-base-stub-0.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
