--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,7 @@
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
 resolver: nightly-2018-04-21
+# resolver: lts-7.19
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,9 +42,11 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- git: git@github.com:ghcjs/ghcjs-base.git
-  commit: 4560541fbab5b77ee34d0348ec04bb1dda8e5db3
+# - git: git@github.com:ghcjs/ghcjs-base.git
+#   commit: 4560541fbab5b77ee34d0348ec04bb1dda8e5db3
+- '/Users/louis/repo/js/ghcjs-base'
 - '/Users/louis/repo/js/ghcjs-base-stub'
+- 'newtype-generics-0.5.3'
 
 # Override default flag values for local packages and extra-deps
 flags: {}
