--- a/stack.yaml
+++ b/stack.yaml
@@ -43,9 +43,8 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 # - git: git@github.com:ghcjs/ghcjs-base.git
-#   commit: 4560541fbab5b77ee34d0348ec04bb1dda8e5db3
-- '/Users/louis/repo/js/ghcjs-base'
-- '/Users/louis/repo/js/ghcjs-base-stub'
+#   commit: b4a8d578758613e5c7db88891f444ff5e6f3edb9
+- ghcjs-base-stub-0.2.0.0
 - 'newtype-generics-0.5.3'
 
 # Override default flag values for local packages and extra-deps
