--- a/stack.yaml
+++ b/stack.yaml
@@ -42,10 +42,10 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
 extra-deps:
-# - git: git@github.com:ghcjs/ghcjs-base.git
-#   commit: b4a8d578758613e5c7db88891f444ff5e6f3edb9
+- git: git@github.com:ghcjs/ghcjs-base.git
+  commit: b4a8d578758613e5c7db88891f444ff5e6f3edb9
 - ghcjs-base-stub-0.2.0.0
-- 'newtype-generics-0.5.3'
+- newtype-generics-0.5.3
 
 # Override default flag values for local packages and extra-deps
 flags: {}
