--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -1,7 +1,7 @@
 name:                javascript-extras
 version:             0.5.0.0
 synopsis:            Extra javascript functions when using GHCJS
-description:         Extra javascript functions when using GHCJS
+description:         Extra javascript functions when using GHCJS. Please see at README.md.
 homepage:            https://github.com/louispan/javascript-extras#readme
 license:             BSD3
 license-file:        LICENSE
