--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2018-04-21
+resolver: lts-7.24
 # resolver: lts-7.24
 
 # User packages to be built.
@@ -46,6 +46,7 @@ extra-deps:
   commit: HEAD
 - ghcjs-base-stub-0.2.0.0
 - newtype-generics-0.5.3
+- aeson-1.1.2.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
