Added Applicative Aeson instances

--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -26,6 +26,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.1.2.0
                      , deepseq >= 1.4
+                     , glazier >= 1.1
                      , newtype-generics >= 0.5
                      , parallel >= 3.2
                      , text >= 1.2
