--- a/stack.yaml
+++ b/stack.yaml
@@ -44,9 +44,16 @@ packages:
 extra-deps:
 - git: git@github.com:ghcjs/ghcjs-base.git
   commit: HEAD
+- alternators-1.0.0.0
 - ghcjs-base-stub-0.2.0.0
 - newtype-generics-0.5.3
 - aeson-1.1.2.0
+- '/Users/louis/repo/hs/glazier'
+- data-diverse-4.6.0.0
+- data-diverse-lens-4.3.0.0
+- data-has-0.3.0.0
+- unliftio-0.2.7.0
+- unliftio-core-0.1.1.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
