--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -25,6 +25,7 @@ library
                        JavaScript.Extras.Aeson.Instances
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.4.2.0
+                     , aeson-applicative >= 1.4
                      , deepseq >= 1.4
                      , newtype-generics >= 0.5
                      , parallel >= 3.2
