Hashable instance for JSString

--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -19,6 +19,7 @@ library
   exposed-modules:     JavaScript.Extras
                        JavaScript.Extras.Aeson.Instances
                        JavaScript.Extras.Cast
+                       JavaScript.Extras.JSString.Instances
                        JavaScript.Extras.JSVal.Instances
                        JavaScript.Extras.JSVal.Unsafe
                        JavaScript.Extras.Number
@@ -27,6 +28,7 @@ library
                      , aeson >= 1.4.2
                      , aeson-applicative >= 1.4
                      , deepseq >= 1.4
+                     , hashable >= 1.2
                      , lens >= 4.14
                      , newtype-generics >= 0.5
                      , parallel >= 3.2
