--- a/javascript-extras.cabal
+++ b/javascript-extras.cabal
@@ -1,17 +1,18 @@
+cabal-version:       2.2
 name:                javascript-extras
 version:             0.6.0.0
 synopsis:            Extra javascript functions when using GHCJS
 description:         Extra javascript functions when using GHCJS. Please see at README.md.
 homepage:            https://github.com/louispan/javascript-extras#readme
-license:             BSD3
+license:             BSD-3-Clause
 license-file:        LICENSE
 author:              Louis Pan
 maintainer:          louis@pan.me
-copyright:           2017 Louis Pan
+copyright:           2019 Louis Pan
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
-cabal-version:       >=1.10
+                   , package.json
 
 library
   hs-source-dirs:      src
