--- a/example/package.json
+++ b/example/package.json
@@ -3,10 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "javascript-extras": "file:..",
+    "javascript-extras": "file:.."
+  },
+  "sideEffects": [
+    "./src/index.js"
+  ],
+  "scripts": {
+    "start": "webpack-dev-server --display-error-details --progress --colors --open --config webpack.dev.js",
+    "build": "webpack --display-error-details --progress --colors --config webpack.dev.js"
+  },
+  "devDependencies": {
+    "closure-webpack-plugin": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.1",
+    "webpack-merge": "^4.2.2"
   }
 }
