--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2018-12-17 # 8.6.2
+resolver: lts-14.7 # gh 8.6.5
+# resolver: nightly-2018-12-17 # 8.6.2
 # resolver: lts-7.24 # 8.0.1
 
 # User packages to be built.
