--- a/example/javascript-extras-example.cabal
+++ b/example/javascript-extras-example.cabal
@@ -14,20 +14,31 @@ build-type:          Simple
 extra-source-files:  README.md
                    , package.json
 
-executable javascript-extras-example
+executable example
   hs-source-dirs:      hs
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
   cpp-options:         -DGHCJS_BROWSER
   build-depends:       base >= 4.7 && < 5
                      , javascript-extras
+                     , ghcjs-base-stub >= 0.3
   default-language:    Haskell2010
   default-extensions:  ApplicativeDo
-  if impl(ghcjs)
-    build-depends: ghcjs-base
-                 , ghcjs-prim >= 0.1
-  if !impl(ghcjs)
-    build-depends: ghcjs-base-stub >= 0.2
+
+executable build
+  hs-source-dirs:      .
+  main-is:             Shakefile.hs
+  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-I0
+  build-depends:       base >= 4.7 && < 5
+                     , binary
+                     , Cabal
+                     , deepseq
+                     , directory
+                     , extra
+                     , hashable
+                     , safe
+                     , shake
+  default-language:    Haskell2010
 
 source-repository head
   type:     git
