--- a/cabal.project
+++ b/cabal.project
@@ -1,8 +1,3 @@
+packages: . ../../hs/aeson-applicative
 -- don't include subdirectories
-packages: ./*.cabal
 optional-packages:
-
-source-repository-package
-    type: git
-    location: https://github.com/louispan/aeson-applicative.git
-    tag: HEAD
