--- a/example/cabal.project
+++ b/example/cabal.project
@@ -1,6 +1,1 @@
-packages: . ..
-
-source-repository-package
-    type: git
-    location: https://github.com/louispan/aeson-applicative.git
-    tag: HEAD
+packages: . .. ../../../hs/aeson-applicative
